--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="button_stop">STOP</string>
 
     <string name="ble_not_supported">Your device does not support Bluetooth Low Energy</string>
+    <string name="title_activity_main2">Main2Activity</string>
 </resources>
