--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="ble_not_supported">Your device does not support Bluetooth Low Energy</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="button_connect_gatt">Connect</string>
+    <string name="disconnect_gatt">Disconnect</string>
 </resources>
