--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="button_connect_gatt">Connect</string>
     <string name="disconnect_gatt">Disconnect</string>
     <string name="textView_SI">Received input:</string>
+    <string name="textview_connection_state">Connection State</string>
+    <string name="textview_connection_info">Info</string>
 </resources>
