--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="toolbar_main_stopScan">STOP SCAN</string>
     <string name="toolbar_main_rssi">RSSI Graph</string>
     <string name="toolbar_main_about">About</string>
+    <string name="toolbar_main_adapter_info">Phone Info</string>
     <string name="menu_connect">CONNECT</string>
     <string name="menu_disconnect">DISCONNECT</string>
 
