--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">BLEScanner</string>
-    <string name="welcome_message">BLE Scanner</string>
+    <string name="app_name">Tesi</string>
+    <string name="welcome_message">Tesi</string>
     <string name="button_scan">SCAN</string>
     <string name="button_stop">STOP</string>
 
