--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,11 @@
     <string name="menu_disconnect">DISCONNECT</string>
     <string name="toolbar_sensors_rssi">RSSI Graph</string>
     <string name="toolbar_sensors_mqtt">Send Data To Cloud</string>
+    <string name="title_activity_mqtt_connectiojn">mqttConnectiojn</string>
+    <!--
+    This string is used for square devices and overridden by hello_world in
+    values-round/strings.xml for round devices.
+    -->
+    <string name="hello_world">Hello Square World!</string>
 
 </resources>
